[package]
name = "basic"
version = "0.1.0"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtra = { version = "0.5.1", features = ["with-tokio-1"] }
xtra_proc_macro = { path = "../../" }
async-trait = "0.1.50"
tokio = { version = "1.5.0", features = ["full"] }
